1.2.4 release

	* fix binding TCP and UDP sockets to the same port, when specifying port 0
	* fix announce_to_all_trackers and announce_to_all_tiers behavior
	* fix suggest_read_cache setting
	* back-off tracker hostname looksups resulting in NXDOMAIN
	* lower SOCKS5 UDP keepalive timeout
	* fix external IP voting for multi-homed DHT nodes
	* deprecate broadcast_lsd setting. Just use multicast
	* deprecate upnp_ignore_nonrouters setting
	* don't attempt sending event=stopped if event=start never succeeded
	* make sure &key= stays consistent between different source IPs (as mandated by BEP7)
	* fix binding sockets to outgoing interface
	* add new socks5_alert to trouble shoot SOCKS5 proxies

1.2.3 release

	* fix erroneous event=completed tracker announce when checking files
	* promote errors in parsing listen_interfaces to post listen_failed_alert
	* fix bug in protocol encryption/obfuscation
	* fix buffer overflow in SOCKS5 UDP logic
	* fix issue of rapid calls to file_priority() clobbering each other
	* clear tracker errors on success
	* optimize setting with unlimited unchoke slots
	* fixed restoring of trackers, comment, creation date and created-by in resume data
	* fix handling of torrents with too large pieces
	* fixed division by zero in anti-leech choker
	* fixed bug in torrent_info::swap

1.2.2 release

	* fix cases where the disable_hash_checks setting was not honored
	* fix updating of is_finished torrent status, when changing piece priorities
	* fix regression in &left= reporting when adding a seeding torrent
	* fix integer overflow in http parser
	* improve sanitation of symlinks, to support more complex link targets
	* add DHT routing table affinity for BEP 42 nodes
	* add torrent_info constructor overloads to control torrent file limits
	* feature to disable DHT, PEX and LSD per torrent
	* fix issue where trackers from magnet links were not included in create_torrent()
	* make peer_info::client a byte array in python binding