@@ -431,7 +431,7 @@ TORRENT_TEST(save_state_peer_id)
 auto const count_dht_inits = [](session& ses)
 {
 	int count = 0;
-	int num = 120; // this number is adjusted per version, an estimate
+	int num = 200; // this number is adjusted per version, an estimate
 	time_point const end_time = clock_type::now() + seconds(15);
 	while (true)
 	{
@@ -493,6 +493,43 @@ TORRENT_TEST(init_dht_empty_bootstrap)
 	p.set_str(settings_pack::dht_bootstrap_nodes, "");
 
 	lt::session s(p);
+
+	int const count = count_dht_inits(s);
+	TEST_EQUAL(count, 1);
+}
+
+TORRENT_TEST(dht_upload_rate_overflow_pack)
+{
+	settings_pack p = settings();
+	// make sure this doesn't cause an overflow
+	p.set_int(settings_pack::dht_upload_rate_limit, std::numeric_limits<int>::max());
+	p.set_int(settings_pack::alert_mask, alert_category_t(p.get_int(settings_pack::alert_mask))
+		| alert::dht_log_notification);
+	p.set_bool(settings_pack::enable_dht, true);
+	lt::session s(p);
+
+	p = s.get_settings();
+	TEST_EQUAL(p.get_int(settings_pack::dht_upload_rate_limit), std::numeric_limits<int>::max() / 3);
+
+	int const count = count_dht_inits(s);
+	TEST_EQUAL(count, 1);
+}
+
+TORRENT_TEST(dht_upload_rate_overflow)
+{
+	settings_pack p = settings();
+	p.set_bool(settings_pack::enable_dht, true);
+	p.set_int(settings_pack::alert_mask, alert_category_t(p.get_int(settings_pack::alert_mask))
+		| alert::dht_log_notification);
+	lt::session s(p);
+
+	// make sure this doesn't cause an overflow
+	dht::dht_settings sett;
+	sett.upload_rate_limit = std::numeric_limits<int>::max();
+	s.set_dht_settings(sett);
+
+	p = s.get_settings();
+	TEST_EQUAL(p.get_int(settings_pack::dht_upload_rate_limit), std::numeric_limits<int>::max() / 3);
 
 	int const count = count_dht_inits(s);
 	TEST_EQUAL(count, 1);
