@@ -1,3 +1,5 @@
+	* undeprecate settings_pack::dht_upload_rate_limit
+
 1.2.4 release
 
 	* fix binding TCP and UDP sockets to the same port, when specifying port 0
